# Snake

./: .clang-format  CMakeLists.txt  README.md  install.sh
include/: engine.h  food.h  input.h  iobject.h  scoreboard.h  snake.h  utilities.h  vector2d.h
src/: engine.cpp  food.cpp  input.cpp  main.cpp  scoreboard.cpp  snake.cpp
